# mplpanel

./: README.md  pyproject.toml
demo/: demo.py  demo_backend.py  demo_panel.py  frameplus.py  mainframe.py
mplpanel/: __init__.py  graph.py  graph_backend.py  graph_common.py  graph_datatip.py  graph_dock.py  graph_edit.py  graph_stats.py  graph_subplot.py  graph_svg.py  graph_timeline.py  graph_toolbar.py  utility.py  version.py
