[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mplpanel"
version = "0.1.0"
authors = [
  { name="Tianzhu Qiao", email="tq@feiyilin.com" },
]
license = {file = "LICENSE"}
description="A wx.Panel to use matplotlib plot in wxPython"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
          'wxpython>=4.2.1'
      ]

[project.urls]
"Homepage" = "https://github.com/tianzhuqiao/mplpanel"

[tool.setuptools.packages]
find = {}

