[build-system]
requires = ["setuptools>=67.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mplpanel"
authors = [
  { name="Tianzhu Qiao", email="tq@feiyilin.com" },
]
license = {file = "LICENSE"}
description="A wx.Panel to use matplotlib plot in wxPython"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
          'wxpython>=4.2.1'
      ]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "mplpanel.version.__version__"}

[project.urls]
"Homepage" = "https://github.com/tianzhuqiao/mplpanel"

[tool.setuptools]
packages = ["mplpanel"]

